--- a/html_basic/base_index.html
+++ b/html_basic/base_index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
-<html> <head>My dream team </head>
-	<title>Only the best  </title>
-	<body> For football fans, the question of who has been the greater footballer between L.Messi and C.Ronaldo has always been a topic of debate, but I would love to see them playing together before they retire, this would make one of the greatestest teams to ever play the sport  </body> </html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Goats</title>
+</head>
+<body>For football fans, the question of who has been the greater footballer between L.Messi and C.Ronaldo has always been a topic of debate, but I would love to see them playing together before they retire, this would make one of the greatestest teams to ever play the sport
+    
+</body>
+</html>
